[gd_scene load_steps=21 format=3 uid="uid://ccfkje1e5xvfw"]

[ext_resource type="Script" uid="uid://duw5h16xl6n6b" path="res://day_level_class.gd" id="1_od17v"]
[ext_resource type="PackedScene" uid="uid://baa4t85c58ojf" path="res://stack.tscn" id="2_6qglx"]
[ext_resource type="Texture2D" uid="uid://b5b84qpnj6f6h" path="res://Assets/Art/Assets_Sprite_Sheet_v1.png" id="3_nipeb"]
[ext_resource type="AudioStream" uid="uid://43bxp4m5qat" path="res://Assets/Sound/UnpaidIntern_RoomTone_SFX.ogg" id="4_s0hlr"]
[ext_resource type="AudioStream" uid="uid://b8ucflspdavth" path="res://Assets/Sound/UnpaidIntern_Music.ogg" id="5_ty5gw"]
[ext_resource type="Texture2D" uid="uid://p7b3rtttf3of" path="res://Assets/Art/Desk_Background.png" id="7_qax2y"]
[ext_resource type="Shader" path="res://clickable_folder.gdshader" id="8_c8h3e"]
[ext_resource type="Texture2D" uid="uid://cdh11f0tu3plf" path="res://notepad_table_texture.tres" id="9_4e7rn"]
[ext_resource type="PackedScene" uid="uid://bmtso2h4ovqqn" path="res://coffeecup.tscn" id="10_6qglx"]
[ext_resource type="PackedScene" uid="uid://b4v6x0v68yymw" path="res://spawn_manager.tscn" id="10_nipeb"]
[ext_resource type="PackedScene" uid="uid://bv8hjbpyg2wb3" path="res://directions.tscn" id="11_nipeb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_urjdr"]
atlas = ExtResource("3_nipeb")
region = Rect2(143, 13, 106, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygvcp"]
atlas = ExtResource("3_nipeb")
region = Rect2(268, 14, 106, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg7ih"]
atlas = ExtResource("3_nipeb")
region = Rect2(21, 13, 106, 69)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_k2a70"]
a = Vector2(-181, -8)
b = Vector2(458, -6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urjdr"]
size = Vector2(32.8837, 340)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jtnn"]
size = Vector2(595, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_256nn"]
size = Vector2(20, 318.211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rm208"]
size = Vector2(609, 20)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_256nn"]
shader = ExtResource("8_c8h3e")
shader_parameter/clr = Color(1, 1, 1, 1)
shader_parameter/type = 1
shader_parameter/thickness = 0.0

[node name="Day Two" type="Node2D"]
process_mode = 1
script = ExtResource("1_od17v")
day = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)

[node name="Stack One" parent="." instance=ExtResource("2_6qglx")]
position = Vector2(293, 92)
day = 1
stack_color = 1
texture = SubResource("AtlasTexture_urjdr")

[node name="Stack Two" parent="." instance=ExtResource("2_6qglx")]
position = Vector2(450, 92)
day = 1
texture = SubResource("AtlasTexture_ygvcp")

[node name="Stack Three" parent="." instance=ExtResource("2_6qglx")]
position = Vector2(137, 91)
day = 1
stack_color = 2
texture = SubResource("AtlasTexture_mg7ih")

[node name="Ambience" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_s0hlr")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_ty5gw")

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
process_mode = 3

[node name="Held" type="Node2D" parent="."]

[node name="Viewport Boundaries" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Viewport Boundaries"]
position = Vector2(210, 364)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Viewport Boundaries/StaticBody2D"]
position = Vector2(-29, 7)
shape = SubResource("SegmentShape2D_k2a70")

[node name="StaticBody2D2" type="StaticBody2D" parent="Viewport Boundaries"]
position = Vector2(208, 1)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Viewport Boundaries/StaticBody2D2"]
position = Vector2(-29, 7)
shape = SubResource("SegmentShape2D_k2a70")

[node name="StaticBody2D3" type="StaticBody2D" parent="Viewport Boundaries"]
position = Vector2(-2, 94)
rotation = 1.5708
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Viewport Boundaries/StaticBody2D3"]
position = Vector2(-29, 7)
shape = SubResource("SegmentShape2D_k2a70")

[node name="StaticBody2D4" type="StaticBody2D" parent="Viewport Boundaries"]
position = Vector2(642, 117)
rotation = 1.5708
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Viewport Boundaries/StaticBody2D4"]
position = Vector2(-29, 7)
shape = SubResource("SegmentShape2D_k2a70")

[node name="Table Boundaries" type="Node2D" parent="."]

[node name="TableLeft" type="Area2D" parent="Table Boundaries" groups=["TableLeft"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table Boundaries/TableLeft"]
position = Vector2(26.4404, 187.085)
rotation = 0.0349066
shape = SubResource("RectangleShape2D_urjdr")

[node name="TableBottom" type="Area2D" parent="Table Boundaries" groups=["TableBottom"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table Boundaries/TableBottom"]
position = Vector2(329.5, 339.5)
shape = SubResource("RectangleShape2D_8jtnn")

[node name="TableRight" type="Area2D" parent="Table Boundaries" groups=["TableRight"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table Boundaries/TableRight"]
position = Vector2(596.63, 170.901)
rotation = -0.0349066
shape = SubResource("RectangleShape2D_256nn")

[node name="TableTop" type="Area2D" parent="Table Boundaries" groups=["TableTop"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table Boundaries/TableTop"]
position = Vector2(313, 16)
shape = SubResource("RectangleShape2D_rm208")

[node name="Desk" type="Sprite2D" parent="."]
z_index = -2
texture_filter = 1
position = Vector2(320, 180)
texture = ExtResource("7_qax2y")

[node name="Directions" type="TextureButton" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_256nn")
offset_left = 57.0
offset_top = 270.0
offset_right = 170.0
offset_bottom = 342.0
scale = Vector2(0.27, 0.5)
focus_mode = 1
texture_normal = ExtResource("9_4e7rn")

[node name="Clutter" parent="." instance=ExtResource("10_6qglx")]
position = Vector2(339, 237)

[node name="SpawnManager" parent="." instance=ExtResource("10_nipeb")]
day = 1

[node name="DirectionsSplash" parent="." instance=ExtResource("11_nipeb")]
visible = false
day = 1

[connection signal="mouse_entered" from="Directions" to="." method="_on_directions_mouse_entered"]
[connection signal="mouse_exited" from="Directions" to="." method="_on_directions_mouse_exited"]
[connection signal="pressed" from="Directions" to="." method="_on_directions_pressed"]
[connection signal="button_pressed" from="DirectionsSplash" to="." method="_on_directions_closed"]
